--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "open-sans-fonts": "^1.6.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
